--- a/ingress.yaml
+++ b/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - host: a86d7620a7faf4f13b6105d7795aefb9-71443352.eu-west-1.elb.amazonaws.com/
+  - host: a86d7620a7faf4f13b6105d7795aefb9-71443352.eu-west-1.elb.amazonaws.com
     http:
       paths:
       - path: /
